add second section

--- a/first_project/index.html
+++ b/first_project/index.html
@@ -23,5 +23,28 @@
             <button class="btnTwo">Explore Now</button>
         </div>
     </section>
+    <section class="sectionSecond">
+          <div class="secDiv1">
+              <img src="./images/delively.png" alt="">
+              <div >
+                <h3>Discount Voucher</h3>
+                 <p>Quisque velit nisi, pretium ut lacinia in df fasf Quisque velit nisi, pretium  </p>
+              </div>
+          </div>
+          <div class="secDiv2">
+            <img src="./images/food.png" alt="">
+            <div>
+              <h3>Fresh Healthy Food</h3>
+               <p>Quisque velit nisi, pretium ut lacinia in df fasf Quisque velit nisi, pretium  </p>
+            </div>
+        </div>
+        <div class="secDiv3">
+            <img src="./images/fast.png" alt="">
+            <div>
+              <h3>Fast Home Delivery</h3>
+               <p>Quisque velit nisi, pretium ut lacinia in df fasf Quisque </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
